# checks

./: .clang-format  CMakeLists.txt  lambda_in_parenthesis.cpp  lambda_in_parenthesis.h  module.cpp  return_statement_in_parenthesis.cpp  return_statement_in_parenthesis.h
